@@ -22,6 +22,7 @@
 * Latitude19: New gateway support [shasum]
 * BraintreeBlue: remove invalid test assertions [prburke]
 * Merchant e-Solutions: Pass order_id with capture [curiousepic]
+* CyberSource: Add rescue for ResponseErrors [curiousepic]
 
 
 == Version 1.58.0 (March 1, 2016)
